--- a/Integer_10/Integer_10.vcxproj
+++ b/Integer_10/Integer_10.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7a19d87a-7a94-4865-8b89-3339b4bf9c93}</ProjectGuid>
-    <RootNamespace>Integer</RootNamespace>
+    <ProjectGuid>{da2e09f3-bf06-433d-ada8-84c16a3ccb56}</ProjectGuid>
+    <RootNamespace>Integer10</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Integer_10</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Integer_.cpp" />
+    <ClCompile Include="Integer_10.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
