--- a/Integer_10/Integer_10.vcxproj.filters
+++ b/Integer_10/Integer_10.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Integer_.cpp">
+    <ClCompile Include="Integer_10.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
